<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minHeight="240dp"
    android:padding="32dp">

    <se.infomaker.iap.theme.view.ThemeableTextView
        android:id="@+id/leadin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@id/alreadySubscribedTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_goneMarginBottom="0dp"
        app:themeKey="provisioningTitle"
        tools:text="@string/locked_article_login_only" />

    <se.infomaker.iap.theme.view.ThemeableTextView
        android:id="@+id/alreadySubscribedTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/showLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/leadin"
        app:themeKey="provisioningLeadin"
        tools:text="@string/already_subscribed_text_login_only" />

    <se.infomaker.iap.theme.view.ThemeableMaterialButton
        android:id="@+id/showLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="16dp"
        android:padding="12dp"
        app:layout_constraintBottom_toTopOf="@id/alreadySubscribedText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/alreadySubscribedTitle"
        app:themeBackgroundColor="purchaseSubscriptionLoginButton"
        app:themeKey="purchaseSubscriptionLoginButton"
        tools:text="@string/login" />

    <se.infomaker.iap.theme.view.ThemeableTextView
        android:id="@+id/alreadySubscribedText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/showLogin"
        app:themeKey="provisioningBody"
        tools:text="@string/already_subscribed_text" />

    <se.infomaker.iap.theme.view.ThemeableTextView
        android:id="@+id/subscriptionExpired"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/subscriptionRenewalMessage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_goneMarginBottom="0dp"
        app:themeKey="provisioningTitle"
        tools:text="@string/subscription_expired" />

    <se.infomaker.iap.theme.view.ThemeableTextView
        android:id="@+id/subscriptionRenewalMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/logoutButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/subscriptionExpired"
        app:themeKey="provisioningLeadin"
        tools:text="@string/subscription_renewal_message_login_only" />

    <se.infomaker.iap.theme.view.ThemeableMaterialButton
        android:id="@+id/contactCustomerServiceButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="16dp"
        android:padding="12dp"
        android:text="@string/logout_button"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/subscriptionRenewalMessage"
        app:themeBackgroundColor="purchaseSubscriptionLoginButton"
        app:themeKey="purchaseSubscriptionLoginButton" />

    <se.infomaker.iap.theme.view.ThemeableMaterialButton
        android:id="@+id/logoutButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="16dp"
        android:padding="12dp"
        android:text="@string/logout_button"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/subscriptionRenewalMessage"
        app:themeBackgroundColor="purchaseSubscriptionLoginButton"
        app:themeKey="purchaseSubscriptionLoginButton" />

</androidx.constraintlayout.widget.ConstraintLayout>